houses under construction

--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
           loading="lazy">
         <span class="ml-2">gregslist-auth</span>
       </a>
+      <div id="listing-form-button"></div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
